# jageocoder-converter

./: .gitignore  LICENSE  Pipfile  README.md  build_datafiles.py  convert.py  create_database.py  data_manager.py  download_isj.py  index.html  latest_index.html  pyproject.toml  read_jiscode.py  requirements.txt  setup.cfg  validate_gaiku.py  validate_oaza.py
doc/: README-basereg.txt  README-gaiku.md  README-isj.txt  README-jukyo.md  README-jusho.txt  index.rst
geonlp/: japan_city.csv
jageocoder_converter/: __init__.py  __main__.py  address_node.capnp  base_converter.py  base_registry.py  capnp_manager.py  chiban_converter.py  city_converter.py  config.py  data_manager.py  gaiku_converter.py  geolonia_converter.py  jusho_converter.py  oaza_converter.py  postcoder.py
jageocoder_converter/data/: japan_pref.csv  jiscode.jsonl
misc/: validate_gaiku.py  validate_oaza.py
test_scripts/: test_capnp.py  test_capnp_manager.py
