[tool.poetry]
name = "jageocoder-converter"
version = "1.4.0dev1"
description = "Dictionary generator for jageocoder."
authors = ["\"Takeshi Sagara\" <sagara@info-proto.com>"]
readme = "README.md"
packages = [{include = "jageocoder_converter"}]

[tool.poetry.dependencies]
python = "^3.8.1,<4.0"
jaconv = "^0.3.4"
docopt = "^0.6.2"
pyproj = "^3.4.1"
pycapnp = "^1.3.0"
flake8 = "^5.0.0"
portabletab = {path = "../PortableTab"}
jageocoder = {path = "../jageocoder"}

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
