[tool.poetry]
name = "jageocoder-converter"
version = "1.4.1rc1"
description = "Dictionary generator for jageocoder."
authors = ["\"Takeshi Sagara\" <sagara@info-proto.com>"]
readme = "README.md"
packages = [{include = "jageocoder_converter"}]

[tool.poetry.dependencies]
python = "^3.8.1,<4.0"
jageocoder = {git = "https://github.com/t-sagara/jageocoder.git", rev = "v1"}
jaconv = "^0.3.4"
docopt = "^0.6.2"
pyproj = "^3.2.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
pytest = "^7.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
