[tool.poetry]
name = "jageocoder-converter"
version = "2.0.3"
description = "Dictionary generator for jageocoder."
authors = ["\"Takeshi Sagara\" <sagara@info-proto.com>"]
readme = "README.md"
packages = [{include = "jageocoder_converter"}]

[tool.poetry.dependencies]
python = "^3.8.1,<4.0"
jaconv = "^0.3.4"
docopt = "^0.6.2"
pyproj = "^3.4.1"
pycapnp = "^1.3.0"
jageocoder = "2.1.0"
certifi = ">=2023.7.22"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
flake8 = "^6.0.0"
twine = "^4.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
