[metadata]
name = jageocoder_converter
version = 0.2.1dev1
url = https://github.com/t-sagara/jageocoder-converter
download_url = https://github.com/t-sagara/jageocoder-converter
author = Takeshi Sagara
author_email = sagara@info-proto.com
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
license = MIT
license_file = LICENSE
description = A Python implementation of Japanese-address geocoder.
long_description = file: README.md
long_description_content_type = text/markdown
keywords =
    geocoder
    Japanese
    address
    converter

[options]
packages =
    jageocoder_converter
install_requires =
    jageocoder>=0.2.0
    jaconv
    docopt

[options.package_data]
jageocoder_converter = data/japan_pref.csv
